<resources>
    <string name="app_name">Project-I</string>
    <string name="title_home">Posts</string>
    <string name="title_dashboard">Messages</string>
    <string name="title_notifications">Notifications</string>
    <string name="this_is_notifications_screen">This is Notifications screen</string>
    <string name="this_is_messages_screen">This is Messages screen</string>
    <string name="e_gram">E-gram</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="welcome_let_s_get_e_connected">Welcome ! Let\'s get e-connected</string>
    <string name="todo1">TODO1</string>
    <string name="todo2">TODO2</string>
    <string name="todo3">TODO3</string>
    <string name="todo4">TODO4</string>
    <string name="new_posts">New Posts</string>

</resources>
