<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="@drawable/p8">

    <ScrollView
        android:layout_width="381dp"
        android:layout_height="476dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="800dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.429">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/searchImage1"
                android:layout_width="359dp"
                android:layout_height="300dp"
                android:contentDescription="@string/todo1"
                android:src="@drawable/p6"></ImageView>


            <ImageView
                android:id="@+id/searchImage2"
                android:layout_width="359dp"
                android:layout_height="300dp"
                android:contentDescription="@string/todo2"
                android:src="@drawable/p5">
            </ImageView>
            <ImageView
                android:id="@+id/searchImage3"
                android:layout_width="359dp"
                android:layout_height="300dp"
                android:contentDescription="@string/todo3"
                android:src="@drawable/p7"></ImageView>
            <ImageView
                android:id="@+id/searchImage4"
                android:layout_width="359dp"
                android:layout_height="300dp"
                android:contentDescription="@string/todo4"
                android:src="@drawable/p4">
            </ImageView>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="247dp"
        android:layout_height="70dp"
        android:background="@drawable/p9"
        android:fontFamily="@font/alegreya_sc_bold_italic"
        android:text="@string/e_gram"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="#ffffff"
        android:textSize="45sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.939"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="164dp"
        android:layout_height="147dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/p3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="237dp"
        android:layout_height="61dp"
        android:background="@drawable/p9"
        android:fontFamily="@font/aclonica"
        android:text="@string/welcome_let_s_get_e_connected"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.128" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="154dp"
        android:layout_height="42dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/new_posts"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.247" />

</android.support.constraint.ConstraintLayout>